@@ -1,3 +1,7 @@
+2022-04-27 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Add event for manipulating substructures, resolves #235
+
 2021-12-17 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Fix path to Datatables library, resolves #225 (thanks to Oliver Hader)
